# ChangeLog for dev-db/sqldeveloper
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/sqldeveloper/ChangeLog,v 1.7 2010/06/02 06:46:27 tove Exp $

  02 Jun 2010; Torsten Veller <tove@gentoo.org> metadata.xml:
  Remove bluebird from metadata.xml (#223101)

  05 Jul 2009; <bluebird@gentoo.org> -sqldeveloper-1.5.3.5783.ebuild,
  sqldeveloper-1.5.4.59.40.ebuild:
  x86 stable, remove old

  09 Mar 2009; Raúl Porcel <armin76@gentoo.org>
  sqldeveloper-1.5.3.5783.ebuild:
  x86 stable wrt #261547

*sqldeveloper-1.5.4.59.40 (07 Mar 2009)

  07 Mar 2009; Friedrich Oslage <bluebird@gentoo.org>
  +sqldeveloper-1.5.4.59.40.ebuild:
  Version bump

  20 Jan 2009; Friedrich Oslage <bluebird@gentoo.org>
  sqldeveloper-1.5.3.5783.ebuild:
  It's TNS_ADMIN not TNS_NAMES

  18 Jan 2009; Friedrich Oslage <bluebird@gentoo.org>
  sqldeveloper-1.5.3.5783.ebuild:
  Change pkg_postinst message to suggest to set the TNS_NAMES environment
  variable

*sqldeveloper-1.5.3.5783 (18 Jan 2009)

  18 Jan 2009; Friedrich Oslage <bluebird@gentoo.org> +files/sqldeveloper,
  +metadata.xml, +sqldeveloper-1.5.3.5783.ebuild:
  New package, bug #126170
